# graphalytics-platforms-powergraph

./: .gitignore  README.md  build.sh  pom.xml  prepare-benchmark.sh
config-template/: driver.properties  platform.properties  powergraph.properties  system.properties
fix/: CMakeLists.txt
granula-model-powergraph/: pom.xml
granula-model-powergraph/src/main/java/nl/tudelft/pds/granula/: PowerGraphArchiver.java
granula-model-powergraph/src/main/resources/powergraph-logs/OperationLog/: driver.logs
graphalytics-platforms-powergraph-granula/: pom.xml
graphalytics-platforms-powergraph-granula/src/main/java/nl/tudelft/granula/modeller/: ModelTester.java  Type.java
graphalytics-platforms-powergraph-granula/src/main/java/nl/tudelft/granula/modeller/platform/: Powergraph.java
graphalytics-platforms-powergraph-granula/src/main/java/nl/tudelft/graphalytics/powergraph/: PowerGraphGranulaPlatform.java
graphalytics-platforms-powergraph-granula/src/main/resources/: powergraph.model
graphalytics-platforms-powergraph-platform/: pom.xml
graphalytics-platforms-powergraph-platform/src/main/c/: bfs.cpp  cd.cpp  conn.cpp  granula.hpp  lcc.cpp  main.cpp  pr.cpp  sssp.cpp
graphalytics-platforms-powergraph-platform/src/main/java/nl/tudelft/graphalytics/powergraph/: PowerGraphJob.java  PowerGraphPlatform.java
graphalytics-platforms-powergraph-platform/src/main/resources/: log4j2.xml  powergraph.platform
graphalytics-platforms-powergraph-std/: pom.xml
sh/: build.sh  prepare-benchmark.sh
src/main/assembly/: bin-granula.xml  bin.xml
src/main/c/: CMakeLists.txt  algorithms.hpp  bfs.cpp  cd.cpp  cdlp.cpp  config.cmake  conn.cpp  convert.cpp  granula.hpp  lcc.cpp  main.cpp  pr.cpp  sssp.cpp  utils.hpp  wcc.cpp
src/main/java/nl/tudelft/granula/modeller/: ModelTester.java  Type.java
src/main/java/nl/tudelft/granula/modeller/platform/: Powergraph.java
src/main/java/nl/tudelft/granula/modeller/platform/operation/: LoadGraph.java  PowergraphCleanup.java  PowergraphJob.java  PowergraphStartup.java  ProcessGraph.java
src/main/java/nl/tudelft/granula/modeller/rule/extraction/: PowergraphExtractionRule.java
src/main/java/nl/tudelft/graphalytics/powergraph/: PowerGraphJob.java  PowerGraphPlatform.java  PowergraphJob.java  PowergraphPlatform.java
src/main/java/nl/tudelft/graphalytics/powergraph/algorithms/bfs/: BreadthFirstSearchJob.java
src/main/java/nl/tudelft/graphalytics/powergraph/algorithms/cd/: CommunityDetectionJob.java
src/main/java/nl/tudelft/graphalytics/powergraph/algorithms/cdlp/: CommunityDetectionJob.java
src/main/java/nl/tudelft/graphalytics/powergraph/algorithms/conn/: ConnectedComponentsJob.java
src/main/java/science/atlarge/granula/modeller/: ModelTester.java  Type.java
src/main/java/science/atlarge/granula/modeller/platform/: Powergraph.java
src/main/java/science/atlarge/graphalytics/powergraph/: PowergraphJob.java  PowergraphPlatform.java
src/main/resources/: log4j2.xml  powergraph.platform
src/test/java/nl/tudelft/graphalytics/powergraph/: Utils.java
src/test/java/science/atlarge/graphalytics/powergraph/: Utils.java
(+57 files in other folders)
